added new Card design for posts

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -386,6 +386,77 @@ Ensure the default browser behavior of the `hidden` attribute.
     max-width: 1536px;
   }
 }
+.btn {
+  display: flex;
+  flex: 1 1 0%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 192 102 / var(--tw-bg-opacity));
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600;
+  color: var(--primary-plum-600);
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-offset-width: 4px;
+  --tw-ring-offset-color: #FCFAFB;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 192 102 / var(--tw-bg-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
+}
+.btn:active {
+  --tw-scale-x: .98;
+  --tw-scale-y: .98;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  background-color: var(--secondary-500);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-color: var(--secondary-500);
+}
+.btn:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 146 154 / var(--tw-bg-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(161 146 154 / var(--tw-ring-opacity));
+}
+.btn-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(141 92 92 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.btn-primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(141 92 92 / var(--tw-bg-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(141 92 92 / var(--tw-ring-opacity));
+}
+.btn-primary:active {
+  background-color: var(--primary-plum-600);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-color: var(--primary-plum-600);
+}
 .container {
     padding: 0 15px;
     margin: 0 auto;
@@ -488,6 +559,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-2 {
   margin: 0.5rem;
 }
+.mx-\[-1px\] {
+  margin-left: -1px;
+  margin-right: -1px;
+}
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -512,6 +587,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 1rem;
   margin-right: 1rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -521,8 +599,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-4 {
   margin-top: 1rem;
 }
-.mt-20 {
-  margin-top: 5rem;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .mr-5 {
   margin-right: 1.25rem;
@@ -533,26 +611,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mr-2 {
   margin-right: 0.5rem;
 }
-.mt-10 {
-  margin-top: 2.5rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
-.mt-8 {
-  margin-top: 2rem;
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
-.mr-1 {
-  margin-right: 0.25rem;
+.mt-14 {
+  margin-top: 3.5rem;
 }
 .mb-12 {
   margin-bottom: 3rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mr-1 {
+  margin-right: 0.25rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mt-8 {
+  margin-top: 2rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -586,6 +664,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .-ml-1 {
   margin-left: -0.25rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-16 {
+  margin-bottom: 4rem;
 }
 .block {
   display: block;
@@ -641,6 +725,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-7 {
   width: 1.75rem;
 }
+.w-\[100px\] {
+  width: 100px;
+}
+.w-\[24px\] {
+  width: 24px;
+}
 .w-5\/12 {
   width: 41.666667%;
 }
@@ -649,6 +739,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-\[42px\] {
   width: 42px;
+}
+.w-\[100\%\] {
+  width: 100%;
 }
 .w-\[350px\] {
   width: 350px;
@@ -661,9 +754,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-\[54px\] {
   width: 54px;
-}
-.w-\[24px\] {
-  width: 24px;
 }
 .w-14 {
   width: 3.5rem;
@@ -679,6 +769,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-5 {
   width: 1.25rem;
+}
+.max-w-none {
+  max-width: none;
 }
 .max-w-\[350px\] {
   max-width: 350px;
@@ -704,6 +797,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[20px\] {
   max-width: 20px;
 }
+.flex-\[1\] {
+  flex: 1;
+}
+.flex-\[1_1_100\%\] {
+  flex: 1 1 100%;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -715,6 +814,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .flex-none {
   flex: none;
+}
+.translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
@@ -767,6 +870,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .grid-cols-mobile {
   grid-template-columns: minmax(0, 1fr) repeat(2, minmax(auto, calc((450px - (1 * 20px)) / 2))) minmax(0, 1fr);
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
 .grid-cols-navMobile {
   grid-template-columns: minmax(50px, 1fr) minmax(50px, auto) minmax(50px, auto);
 }
@@ -810,14 +916,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-2xl {
   border-radius: 1rem;
 }
+.rounded-full {
+  border-radius: 9999px;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
 .rounded {
   border-radius: 0.25rem;
-}
-.rounded-full {
-  border-radius: 9999px;
 }
 .rounded-2\.5xl {
   border-radius: 1.25rem;
@@ -864,13 +973,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(239 236 238 / var(--tw-bg-opacity));
 }
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-indigo-500 {
   --tw-bg-opacity: 1;
@@ -935,13 +1044,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -991,6 +1100,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
 }
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
+}
+.pb-7 {
+  padding-bottom: 1.75rem;
+}
+.pl-11 {
+  padding-left: 2.75rem;
+}
 .pl-8 {
   padding-left: 2rem;
 }
@@ -1011,12 +1135,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pb-12 {
   padding-bottom: 3rem;
-}
-.pt-2 {
-  padding-top: 0.5rem;
-}
-.pb-7 {
-  padding-bottom: 1.75rem;
 }
 .pb-6 {
   padding-bottom: 1.5rem;
@@ -1054,6 +1172,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-sentinel__SemiBoldItal {
   font-family: Sentinel SemiBoldItal, serif;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
 .text-heading-3 {
   font-size: 2.063rem;
   line-height: 2.5rem;
@@ -1062,6 +1184,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.text-h3 {
+  font-size: 2.063rem;
+  line-height: 2.5rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
@@ -1069,10 +1203,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 .text-base {
   font-size: 1rem;
@@ -1086,22 +1216,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.5rem;
   line-height: 1.75rem;
 }
-.text-h3 {
-  font-size: 2.063rem;
-  line-height: 2.5rem;
-}
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 2rem;
+.font-light {
+  font-weight: 300;
 }
 .font-semibold {
   font-weight: 600;
 }
+.font-black {
+  font-weight: 900;
+}
 .font-medium {
   font-weight: 500;
-}
-.font-light {
-  font-weight: 300;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1124,6 +1249,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .leading-none {
   line-height: 1;
 }
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+.tracking-widest {
+  letter-spacing: 0.1em;
+}
 .text-primary-600 {
   color: var(--primary-plum-600);
 }
@@ -1141,6 +1272,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-neutral-600 {
   --tw-text-opacity: 1;
   color: rgb(143 125 135 / var(--tw-text-opacity));
+}
+.text-warning-700 {
+  --tw-text-opacity: 1;
+  color: rgb(180 83 9 / var(--tw-text-opacity));
 }
 .text-red-600 {
   --tw-text-opacity: 1;
@@ -1217,6 +1352,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .opacity-75 {
   opacity: 0.75;
 }
+.shadow-none {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -1253,15 +1393,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .transition-colors {
   transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-.transition-all {
-  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1272,6 +1412,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .duration-200 {
   transition-duration: 200ms;
+}
+.duration-500 {
+  transition-duration: 500ms;
 }
 .duration-600 {
   transition-duration: 600ms;
@@ -1558,6 +1701,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mt-8 {
     margin-top: 2rem;
   }
+  .tablet\:mb-8 {
+    margin-bottom: 2rem;
+  }
   .tablet\:mt-96 {
     margin-top: 24rem;
   }
@@ -1585,6 +1731,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:max-w-\[630px\] {
     max-width: 630px;
   }
+  .tablet\:flex-\[0_1_auto\] {
+    flex: 0 1 auto;
+  }
   .tablet\:flex-\[0_1_50\%\] {
     flex: 0 1 50%;
   }
@@ -1598,6 +1747,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:grid-cols-tablet {
     grid-template-columns: minmax(0,1fr) repeat(12,minmax(30px,72.5px)) minmax(0,1fr);;
+  }
+  .tablet\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .tablet\:flex-row {
     flex-direction: row;
@@ -1614,6 +1766,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:gap-x-5 {
     -moz-column-gap: 1.25rem;
          column-gap: 1.25rem;
+  }
+  .tablet\:self-end {
+    align-self: flex-end;
   }
   .tablet\:px-12 {
     padding-left: 3rem;
@@ -1639,6 +1794,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1rem;
     line-height: 1.5rem;
   }
+  .tablet\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
   .tablet\:text-display-2 {
     font-size: 3.375rem;
     line-height: 3.75rem;
@@ -1660,6 +1819,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:my-4 {
     margin-top: 1rem;
     margin-bottom: 1rem;
+  }
+  .laptop\:mt-28 {
+    margin-top: 7rem;
+  }
+  .laptop\:mb-14 {
+    margin-bottom: 3.5rem;
   }
   .laptop\:mr-0 {
     margin-right: 0px;
@@ -1722,8 +1887,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:pt-\[89px\] {
     padding-top: 89px;
   }
+  .laptop\:text-display-2 {
+    font-size: 3.375rem;
+    line-height: 3.75rem;
+  }
   .laptop\:font-medium {
     font-weight: 500;
+  }
+  .laptop\:hover\:translate-y-\[-5px\]:hover {
+    --tw-translate-y: -5px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .laptop\:hover\:shadow-et_4:hover {
+    --tw-shadow: 0px 40px 50px rgba(0, 0, 0, 0.2);
+    --tw-shadow-colored: 0px 40px 50px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
 @media (min-width: 1280px) {
@@ -1736,11 +1914,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-span-8 {
     grid-column: span 8 / span 8;
   }
+  .desktop\:col-span-12 {
+    grid-column: span 12 / span 12;
+  }
   .desktop\:col-start-4 {
     grid-column-start: 4;
   }
+  .desktop\:col-start-2 {
+    grid-column-start: 2;
+  }
   .desktop\:mt-12 {
     margin-top: 3rem;
+  }
+  .desktop\:mt-20 {
+    margin-top: 5rem;
   }
   .desktop\:max-w-\[600px\] {
     max-width: 600px;
@@ -1749,7 +1936,18 @@ Ensure the default browser behavior of the `hidden` attribute.
     max-width: 220px;
   }
   .desktop\:grid-cols-desktop {
-    grid-template-columns: minmax(0,1fr) repeat(12,minmax(auto, calc((1440px - (11 * 30px)) / 12))) minmax(0,1fr);;
+    grid-template-columns: minmax(0,1fr) repeat(12,minmax(auto, calc((1548px - (11 * 30px)) / 12))) minmax(0,1fr);;
+  }
+  .desktop\:gap-x-8 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+  .desktop\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+  .desktop\:px-9 {
+    padding-left: 2.25rem;
+    padding-right: 2.25rem;
   }
   .desktop\:px-20 {
     padding-left: 5rem;
@@ -1764,6 +1962,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:pr-24 {
     padding-right: 6rem;
+  }
+  .desktop\:text-4\.5xl {
+    font-size: 2.375rem;
+    line-height: 2.5rem;
   }
   .desktop\:text-base {
     font-size: 1rem;
@@ -1859,6 +2061,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --primary-plum-600: #5f3d3d;
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
+  --warning-700: #b45309;
 }
 @font-face {
   font-family: "Sentinel Book";
