--- a/styles/app.css
+++ b/styles/app.css
@@ -20,6 +20,7 @@
   --primary-plum-600: #5f3d3d;
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
+  --warning-700: #b45309;
 }
 
 @font-face {
@@ -49,7 +50,11 @@
 }
 @layer components {
   .btn {
-    @apply py-2 px-4 font-semibold rounded-lg shadow-lg;
+    @apply text-primary-600 font-semibold px-5 py-4 rounded-lg hover:ring ring-offset-4 text-base outline-none duration-200 ease-in-out flex flex-1 flex-row justify-center items-center disabled:bg-neutral-500 disabled:ring disabled:ring-neutral-500 bg-secondary-400 hover:ring-secondary-400 hover:bg-secondary-400 ring-offset-neutral-50 active:ring-secondary-500 active:ring active:bg-secondary-500 active:scale-[.98];
+  }
+
+  .btn-primary {
+    @apply bg-primary-500 text-white hover:bg-primary-500 hover:ring-primary-500 active:ring-primary-600 active:ring active:bg-primary-600;
   }
   .btn-underlined {
     @apply underline underline-offset-4 uppercase;
