--- a/app/components/blog/blog.css
+++ b/app/components/blog/blog.css
@@ -3,10 +3,27 @@
     @apply text-blue-500 underline hover:text-teal-300 font-semibold;
   }
 
+  iframe {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+
   & p {
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
     @apply pb-4 text-lg;
     &:first-child {
       @apply text-lg mb-8 tablet:text-xl tablet:mb-10;
+    }
+    &:after {
     }
   }
 
@@ -16,6 +33,10 @@
 
   & h3 {
     @apply text-2xl mb-4 tablet:text-3xl font-sentinel__SemiBoldItal;
+  }
+
+  & h4 {
+    @apply text-xl mb-4 tablet:text-2xl font-sentinel__SemiBoldItal;
   }
 
   & h5 {
@@ -33,4 +54,8 @@
   & [class*="wp-image"] {
     @apply mb-8 text-center mx-auto;
   }
+}
+
+.et_ck_form_v6 {
+  display: none;
 }
