--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -389,6 +389,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 .btn {
   display: flex;
   flex: 1 1 0%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -508,12 +509,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-\[50\%\] {
   left: 50%;
 }
-.top-\[97px\] {
-  top: 97px;
-}
-.left-\[57px\] {
-  left: 57px;
-}
 .top-\[-250px\] {
   top: -250px;
 }
@@ -535,11 +530,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-\[68px\] {
   top: 68px;
 }
-.z-10 {
-  z-index: 10;
-}
 .z-0 {
   z-index: 0;
+}
+.z-10 {
+  z-index: 10;
 }
 .z-20 {
   z-index: 20;
@@ -553,11 +548,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.col-span-full {
+  grid-column: 1 / -1;
+}
+.col-\[1\/3\] {
+  grid-column: 1 / 3;
+}
 .col-start-2 {
   grid-column-start: 2;
 }
 .row-auto {
   grid-row: auto;
+}
+.row-\[1\/1\] {
+  grid-row: 1 / 1;
 }
 .m-auto {
   margin: auto;
@@ -571,17 +575,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-2 {
   margin: 0.5rem;
 }
-.mx-\[-1px\] {
-  margin-left: -1px;
-  margin-right: -1px;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
-}
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 .my-0 {
   margin-top: 0px;
@@ -629,9 +629,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-14 {
   margin-top: 3.5rem;
 }
-.mb-12 {
-  margin-bottom: 3rem;
-}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -646,6 +643,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-16 {
   margin-bottom: 4rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -677,8 +680,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-3 {
   margin-left: 0.75rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .-ml-1 {
   margin-left: -0.25rem;
+}
+.mr-8 {
+  margin-right: 2rem;
 }
 .block {
   display: block;
@@ -695,14 +704,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
   display: none;
 }
+.h-\[300px\] {
+  height: 300px;
+}
+.h-\[30px\] {
+  height: 30px;
+}
 .h-\[42px\] {
   height: 42px;
 }
 .h-\[200px\] {
   height: 200px;
-}
-.h-\[260px\] {
-  height: 260px;
 }
 .h-\[54px\] {
   height: 54px;
@@ -731,11 +743,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-5 {
   height: 1.25rem;
 }
+.h-\[288px\] {
+  height: 288px;
+}
+.max-h-\[304px\] {
+  max-height: 304px;
+}
 .min-h-fullBot {
   min-height: calc(100vh - env(safe-area-inset-bottom));
 }
 .w-7 {
   width: 1.75rem;
+}
+.w-\[30px\] {
+  width: 30px;
 }
 .w-\[100px\] {
   width: 100px;
@@ -782,14 +803,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-5 {
   width: 1.25rem;
 }
+.w-\[545px\] {
+  width: 545px;
+}
 .max-w-none {
   max-width: none;
 }
 .max-w-\[350px\] {
   max-width: 350px;
-}
-.max-w-\[348px\] {
-  max-width: 348px;
 }
 .max-w-\[249px\] {
   max-width: 249px;
@@ -812,6 +833,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[20px\] {
   max-width: 20px;
 }
+.max-w-\[410px\] {
+  max-width: 410px;
+}
 .flex-\[1\] {
   flex: 1;
 }
@@ -829,6 +853,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .flex-none {
   flex: none;
+}
+.flex-\[1_0_100\%\] {
+  flex: 1 0 100%;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
@@ -856,10 +886,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .translate-x-\[-100\%\] {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-\[352\.5deg\] {
-  --tw-rotate: 352.5deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-\[349deg\] {
@@ -898,6 +924,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-row {
   flex-direction: row;
 }
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -907,11 +936,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-wrap {
   flex-wrap: wrap;
 }
+.flex-wrap-reverse {
+  flex-wrap: wrap-reverse;
+}
+.items-start {
+  align-items: flex-start;
+}
 .items-end {
   align-items: flex-end;
 }
 .items-center {
   align-items: center;
+}
+.justify-start {
+  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
@@ -925,6 +963,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
        column-gap: 1.25rem;
+}
+.self-end {
+  align-self: flex-end;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -947,17 +988,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-xl {
   border-radius: 0.75rem;
 }
-.rounded-md {
-  border-radius: 0.375rem;
-}
 .rounded-2\.5xl {
   border-radius: 1.25rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .border {
   border-width: 1px;
 }
 .border-0 {
   border-width: 0px;
+}
+.border-\[1px\] {
+  border-width: 1px;
 }
 .border-b-\[1px\] {
   border-bottom-width: 1px;
@@ -967,6 +1011,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .border-t-\[1px\] {
   border-top-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -980,6 +1027,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(205 167 167 / var(--tw-border-opacity));
 }
+.border-neutral-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(208 201 205 / var(--tw-border-opacity));
+}
 .border-b-neutral-300 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(222 217 220 / var(--tw-border-opacity));
@@ -988,9 +1039,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(252 250 251 / var(--tw-bg-opacity));
 }
+.bg-primary-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 227 220 / var(--tw-bg-opacity));
+}
 .bg-neutral-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 236 238 / var(--tw-bg-opacity));
+}
+.bg-primary-600 {
+  background-color: var(--primary-plum-600);
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -1020,9 +1078,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(60 38 38 / var(--tw-bg-opacity));
 }
-.bg-primary-600 {
-  background-color: var(--primary-plum-600);
-}
 .bg-primary-700 {
   background-color: var(--primary-plum-700);
 }
@@ -1045,11 +1100,29 @@ Ensure the default browser behavior of the `hidden` attribute.
 .stroke-warning-400 {
   stroke: #F3CB48;
 }
+.p-\[5px\] {
+  padding: 5px;
+}
 .p-8 {
   padding: 2rem;
 }
 .p-1 {
   padding: 0.25rem;
+}
+.p-9 {
+  padding: 2.25rem;
+}
+.p-7 {
+  padding: 1.75rem;
+}
+.p-6 {
+  padding: 1.5rem;
+}
+.p-2\.5 {
+  padding: 0.625rem;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -1192,6 +1265,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pb-16 {
   padding-bottom: 4rem;
 }
+.pt-8 {
+  padding-top: 2rem;
+}
+.text-left {
+  text-align: left;
+}
 .text-center {
   text-align: center;
 }
@@ -1245,6 +1324,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-display-2 {
   font-size: 3.375rem;
   line-height: 3.75rem;
+}
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-semibold {
   font-weight: 600;
@@ -1373,6 +1456,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(252 250 251 / var(--tw-text-opacity));
 }
+.text-warning-300 {
+  --tw-text-opacity: 1;
+  color: rgb(252 211 77 / var(--tw-text-opacity));
+}
+.text-primary-800 {
+  --tw-text-opacity: 1;
+  color: rgb(60 38 38 / var(--tw-text-opacity));
+}
+.underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
 .underline-offset-4 {
   text-underline-offset: 4px;
 }
@@ -1398,6 +1493,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .shadow-et_4 {
   --tw-shadow: 0px 40px 50px rgba(0, 0, 0, 0.2);
   --tw-shadow-colored: 0px 40px 50px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xs {
+  --tw-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0px 4px 8px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
@@ -1426,15 +1526,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .transition-colors {
   transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-.transition-all {
-  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1536,6 +1636,36 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.embed-responsive {
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
+  }
+.embed-responsive:before {
+      display: block;
+      content: "";
+      padding-top: 56.25%;
+    }
+.embed-responsive-item {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+.embed-responsive-item iframe {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
 .selection\:bg-teal-300 *::-moz-selection {
   --tw-bg-opacity: 1;
   background-color: rgb(94 234 212 / var(--tw-bg-opacity));
@@ -1568,8 +1698,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(19 78 74 / var(--tw-text-opacity));
 }
+.hover\:scale-\[1\.2\]:hover {
+  --tw-scale-x: 1.2;
+  --tw-scale-y: 1.2;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+.hover\:bg-primary-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(151 105 105 / var(--tw-bg-opacity));
 }
 .hover\:bg-indigo-600:hover {
   --tw-bg-opacity: 1;
@@ -1603,6 +1742,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:ring-primary-400:hover {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(151 105 105 / var(--tw-ring-opacity));
+}
+.hover\:ring-offset-primary-600:hover {
+  --tw-ring-offset-color: var(--primary-plum-600);
 }
 .focus\:border-0:focus {
   border-width: 0px;
@@ -1647,6 +1789,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .active\:bg-secondary-500:active {
   background-color: var(--secondary-500);
+}
+.active\:ring-offset-primary-600:active {
+  --tw-ring-offset-color: var(--primary-plum-600);
 }
 .disabled\:bg-neutral-500:disabled {
   --tw-bg-opacity: 1;
@@ -1719,6 +1864,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:col-span-12 {
     grid-column: span 12 / span 12;
   }
+  .tablet\:col-\[1\/4\] {
+    grid-column: 1 / 4;
+  }
   .tablet\:col-start-3 {
     grid-column-start: 3;
   }
@@ -1784,6 +1932,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+  .tablet\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .tablet\:flex-row {
     flex-direction: row;
   }
@@ -1830,6 +1981,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+  .tablet\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
   .tablet\:text-display-2 {
     font-size: 3.375rem;
@@ -1893,6 +2048,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:grid-cols-navDesktop {
     grid-template-columns: minmax(auto, 1fr) minmax(auto, 3fr) minmax(auto, 1fr);
   }
+  .laptop\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .laptop\:flex-row {
     flex-direction: row;
   }
@@ -1947,20 +2105,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:col-span-8 {
     grid-column: span 8 / span 8;
   }
-  .desktop\:col-span-12 {
-    grid-column: span 12 / span 12;
+  .desktop\:col-\[1\/4\] {
+    grid-column: 1 / 4;
   }
   .desktop\:col-start-4 {
     grid-column-start: 4;
-  }
-  .desktop\:col-start-2 {
-    grid-column-start: 2;
   }
   .desktop\:mt-12 {
     margin-top: 3rem;
   }
   .desktop\:mt-20 {
     margin-top: 5rem;
+  }
+  .desktop\:max-w-none {
+    max-width: none;
   }
   .desktop\:max-w-\[600px\] {
     max-width: 600px;
@@ -1970,6 +2128,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:grid-cols-desktop {
     grid-template-columns: minmax(0,1fr) repeat(12,minmax(auto, calc((1548px - (11 * 30px)) / 12))) minmax(0,1fr);;
+  }
+  .desktop\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .desktop\:gap-x-8 {
     -moz-column-gap: 2rem;
@@ -2000,6 +2161,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 2.375rem;
     line-height: 2.5rem;
   }
+  .desktop\:text-xl {
+    font-size: 1.25rem;
+    line-height: 2rem;
+  }
   .desktop\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -2016,11 +2181,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(94 234 212 / var(--tw-text-opacity));
 }
+.blog-content iframe {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 .blog-content p {
-  padding-bottom: 1rem;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
+    padding-bottom: 1rem;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 .blog-content p:first-child {
   margin-bottom: 2rem;
   font-size: 1.125rem;
@@ -2035,6 +2214,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2rem;
   }
 }
+.blog-content p:after {
+    }
 .blog-content h2 {
   margin-bottom: 1rem;
   font-family: Sentinel SemiBoldItal, serif;
@@ -2057,6 +2238,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   .blog-content h3 {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+}
+.blog-content h4 {
+  margin-bottom: 1rem;
+  font-family: Sentinel SemiBoldItal, serif;
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+@media (min-width: 768px) {
+  .blog-content h4 {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 .blog-content h5 {
@@ -2082,6 +2275,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 2rem;
   text-align: center;
 }
+.et_ck_form_v6 {
+  display: none;
+}
 .root,
 :root,
 #docs-root {
@@ -2094,6 +2290,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --primary-plum-600: #5f3d3d;
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
+  --neutral-400: #d0c9cd;
+  --neutral-500: #a1929a;
+  --neutral-600: #8f7d87;
   --warning-700: #b45309;
 }
 @font-face {
@@ -2119,3 +2318,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff") format("woff");
   src: url("/fonts/sentinel/Sentinel-SemiboldItal.woff2") format("woff2");
 }
+a {
+  transition: all 0.3s;
+}
+a:hover {
+  }
+button:focus {
+    outline: none;
+  }
