--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -464,6 +464,27 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-color: var(--primary-plum-600);
 }
+.btn-teal {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.btn-teal:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(20 184 166 / var(--tw-ring-opacity));
+}
+.btn-teal:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(13 148 136 / var(--tw-ring-opacity));
+}
 .container {
     padding: 0 15px;
     margin: 0 auto;
@@ -485,6 +506,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap;
   border-width: 0;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .visible {
   visibility: visible;
 }
@@ -496,6 +520,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .relative {
   position: relative;
+}
+.inset-y-0 {
+  top: 0px;
+  bottom: 0px;
 }
 .top-0 {
   top: 0px;
@@ -515,20 +543,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-\[0px\] {
   left: 0px;
 }
+.right-0 {
+  right: 0px;
+}
 .right-auto {
   right: auto;
 }
 .left-1\/2 {
   left: 50%;
 }
-.right-0 {
-  right: 0px;
-}
 .left-auto {
   left: auto;
 }
 .top-\[68px\] {
   top: 68px;
+}
+.top-\[-80px\] {
+  top: -80px;
+}
+.right-\[0px\] {
+  right: 0px;
 }
 .z-0 {
   z-index: 0;
@@ -544,6 +578,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .z-\[1050\] {
   z-index: 1050;
+}
+.z-30 {
+  z-index: 30;
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -598,6 +635,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.mr-8 {
+  margin-right: 2rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -680,14 +720,29 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-3 {
   margin-left: 0.75rem;
 }
+.mt-44 {
+  margin-top: 11rem;
+}
 .mt-3 {
   margin-top: 0.75rem;
 }
 .-ml-1 {
   margin-left: -0.25rem;
 }
-.mr-8 {
-  margin-right: 2rem;
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-64 {
+  margin-top: 16rem;
+}
+.mt-72 {
+  margin-top: 18rem;
+}
+.mt-52 {
+  margin-top: 13rem;
+}
+.mt-60 {
+  margin-top: 15rem;
 }
 .block {
   display: block;
@@ -704,8 +759,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
   display: none;
 }
-.h-\[300px\] {
-  height: 300px;
+.h-\[100px\] {
+  height: 100px;
 }
 .h-\[30px\] {
   height: 30px;
@@ -721,6 +776,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-\[24px\] {
   height: 24px;
+}
+.h-5 {
+  height: 1.25rem;
 }
 .h-14 {
   height: 3.5rem;
@@ -739,12 +797,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-\[100vh\] {
   height: 100vh;
-}
-.h-5 {
-  height: 1.25rem;
-}
-.h-\[288px\] {
-  height: 288px;
 }
 .max-h-\[304px\] {
   max-height: 304px;
@@ -788,6 +840,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[54px\] {
   width: 54px;
 }
+.w-5 {
+  width: 1.25rem;
+}
 .w-14 {
   width: 3.5rem;
 }
@@ -800,11 +855,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[40px\] {
   width: 40px;
 }
-.w-5 {
-  width: 1.25rem;
-}
-.w-\[545px\] {
-  width: 545px;
+.w-\[22px\] {
+  width: 22px;
 }
 .max-w-none {
   max-width: none;
@@ -827,14 +879,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-\[600px\] {
   max-width: 600px;
 }
+.max-w-\[245px\] {
+  max-width: 245px;
+}
 .max-w-\[144px\] {
   max-width: 144px;
 }
 .max-w-\[20px\] {
   max-width: 20px;
 }
+.max-w-\[300px\] {
+  max-width: 300px;
+}
 .max-w-\[410px\] {
   max-width: 410px;
+}
+.max-w-xs {
+  max-width: 20rem;
+}
+.flex-\[1_0_100\%\] {
+  flex: 1 0 100%;
 }
 .flex-\[1\] {
   flex: 1;
@@ -854,11 +918,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-none {
   flex: none;
 }
-.flex-\[1_0_100\%\] {
-  flex: 1 0 100%;
-}
-.flex-grow {
-  flex-grow: 1;
+.flex-\[0_1_50\%\] {
+  flex: 0 1 50%;
 }
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
@@ -908,6 +969,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .animate-spin {
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
+}
+.cursor-default {
+  cursor: default;
+}
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .grid-flow-row {
   grid-auto-flow: row;
@@ -967,11 +1037,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 .self-end {
   align-self: flex-end;
 }
+.overflow-auto {
+  overflow: auto;
+}
 .overflow-hidden {
   overflow: hidden;
 }
 .overflow-y-auto {
   overflow-y: auto;
+}
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .rounded-2xl {
   border-radius: 1rem;
@@ -1003,6 +1081,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-\[1px\] {
   border-width: 1px;
 }
+.border-2 {
+  border-width: 2px;
+}
+.border-4 {
+  border-width: 4px;
+}
 .border-b-\[1px\] {
   border-bottom-width: 1px;
 }
@@ -1030,6 +1114,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-neutral-400 {
   --tw-border-opacity: 1;
   border-color: rgb(208 201 205 / var(--tw-border-opacity));
+}
+.border-primary-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(141 92 92 / var(--tw-border-opacity));
 }
 .border-b-neutral-300 {
   --tw-border-opacity: 1;
@@ -1078,6 +1166,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(60 38 38 / var(--tw-bg-opacity));
 }
+.bg-neutral-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 244 245 / var(--tw-bg-opacity));
+}
 .bg-primary-700 {
   background-color: var(--primary-plum-700);
 }
@@ -1097,6 +1189,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
+.bg-neutral-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 201 205 / var(--tw-bg-opacity));
+}
 .stroke-warning-400 {
   stroke: #F3CB48;
 }
@@ -1109,20 +1205,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-1 {
   padding: 0.25rem;
 }
-.p-9 {
-  padding: 2.25rem;
-}
-.p-7 {
-  padding: 1.75rem;
-}
-.p-6 {
-  padding: 1.5rem;
-}
 .p-2\.5 {
   padding: 0.625rem;
 }
 .p-2 {
   padding: 0.5rem;
+}
+.p-6 {
+  padding: 1.5rem;
+}
+.p-9 {
+  padding: 2.25rem;
+}
+.p-7 {
+  padding: 1.75rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -1192,9 +1288,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
 }
+.py-\[1\.13rem\] {
+  padding-top: 1.13rem;
+  padding-bottom: 1.13rem;
+}
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
+}
+.px-\[45px\] {
+  padding-left: 45px;
+  padding-right: 45px;
+}
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.px-\[24px\] {
+  padding-left: 24px;
+  padding-right: 24px;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
@@ -1246,6 +1362,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pb-11 {
   padding-bottom: 2.75rem;
+}
+.pl-3 {
+  padding-left: 0.75rem;
+}
+.pr-10 {
+  padding-right: 2.5rem;
 }
 .pt-\[68px\] {
   padding-top: 68px;
@@ -1324,6 +1446,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-display-2 {
   font-size: 3.375rem;
   line-height: 3.75rem;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-5xl {
   font-size: 3rem;
@@ -1464,12 +1590,23 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(60 38 38 / var(--tw-text-opacity));
 }
+.text-neutral-300 {
+  --tw-text-opacity: 1;
+  color: rgb(222 217 220 / var(--tw-text-opacity));
+}
+.text-neutral-400 {
+  --tw-text-opacity: 1;
+  color: rgb(208 201 205 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
 .underline-offset-4 {
   text-underline-offset: 4px;
+}
+.opacity-100 {
+  opacity: 1;
 }
 .opacity-0 {
   opacity: 0;
@@ -1495,6 +1632,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0px 40px 50px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-xs {
   --tw-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   --tw-shadow-colored: 0px 4px 8px var(--tw-shadow-color);
@@ -1503,6 +1645,29 @@ Ensure the default browser behavior of the `hidden` attribute.
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+.ring-1 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-black {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
+}
+.ring-opacity-5 {
+  --tw-ring-opacity: 0.05;
+}
+.ring-opacity-50 {
+  --tw-ring-opacity: 0.5;
+}
+.ring-opacity-20 {
+  --tw-ring-opacity: 0.2;
 }
 .ring-offset-4 {
   --tw-ring-offset-width: 4px;
@@ -1515,6 +1680,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ring-offset-white {
   --tw-ring-offset-color: #fff;
+}
+.ring-offset-transparent {
+  --tw-ring-offset-color: transparent;
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1549,11 +1717,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .duration-500 {
   transition-duration: 500ms;
 }
+.duration-100 {
+  transition-duration: 100ms;
+}
+.duration-300 {
+  transition-duration: 300ms;
+}
 .duration-600 {
   transition-duration: 600ms;
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .underlined {
     position: relative;
@@ -1718,6 +1895,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(242 192 102 / var(--tw-bg-opacity));
 }
+.hover\:bg-neutral-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 236 238 / var(--tw-bg-opacity));
+}
 .hover\:text-primary-400:hover {
   --tw-text-opacity: 1;
   color: rgb(151 105 105 / var(--tw-text-opacity));
@@ -1858,6 +2039,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:left-\[20px\] {
     left: 20px;
   }
+  .tablet\:top-\[-175px\] {
+    top: -175px;
+  }
+  .tablet\:right-\[-350px\] {
+    right: -350px;
+  }
+  .tablet\:top-\[-90\%\] {
+    top: -90%;
+  }
+  .tablet\:top-auto {
+    top: auto;
+  }
+  .tablet\:bottom-0 {
+    bottom: 0px;
+  }
   .tablet\:col-span-10 {
     grid-column: span 10 / span 10;
   }
@@ -1894,8 +2090,32 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mb-0 {
     margin-bottom: 0px;
   }
+  .tablet\:mr-8 {
+    margin-right: 2rem;
+  }
+  .tablet\:mr-44 {
+    margin-right: 11rem;
+  }
+  .tablet\:mt-0 {
+    margin-top: 0px;
+  }
+  .tablet\:mr-4 {
+    margin-right: 1rem;
+  }
+  .tablet\:ml-4 {
+    margin-left: 1rem;
+  }
+  .tablet\:hidden {
+    display: none;
+  }
+  .tablet\:h-\[300px\] {
+    height: 300px;
+  }
   .tablet\:h-auto {
     height: auto;
+  }
+  .tablet\:h-\[200px\] {
+    height: 200px;
   }
   .tablet\:w-\[205px\] {
     width: 205px;
@@ -1912,11 +2132,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:max-w-\[630px\] {
     max-width: 630px;
   }
+  .tablet\:max-w-\[250px\] {
+    max-width: 250px;
+  }
+  .tablet\:max-w-\[237px\] {
+    max-width: 237px;
+  }
   .tablet\:flex-\[0_1_auto\] {
     flex: 0 1 auto;
   }
   .tablet\:flex-\[0_1_50\%\] {
     flex: 0 1 50%;
+  }
+  .tablet\:flex-auto {
+    flex: 1 1 auto;
   }
   .tablet\:translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
@@ -1941,6 +2170,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:flex-wrap {
     flex-wrap: wrap;
   }
+  .tablet\:flex-wrap-reverse {
+    flex-wrap: wrap-reverse;
+  }
   .tablet\:items-end {
     align-items: flex-end;
   }
@@ -1957,6 +2189,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+  .tablet\:py-\[50px\] {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
   .tablet\:pr-5 {
     padding-right: 1.25rem;
@@ -2020,6 +2256,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:mt-0 {
     margin-top: 0px;
   }
+  .laptop\:mr-8 {
+    margin-right: 2rem;
+  }
+  .laptop\:mb-0 {
+    margin-bottom: 0px;
+  }
+  .laptop\:mb-8 {
+    margin-bottom: 2rem;
+  }
+  .laptop\:mr-6 {
+    margin-right: 1.5rem;
+  }
+  .laptop\:mr-4 {
+    margin-right: 1rem;
+  }
+  .laptop\:block {
+    display: block;
+  }
   .laptop\:flex {
     display: flex;
   }
@@ -2028,6 +2282,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:h-full {
     height: 100%;
+  }
+  .laptop\:h-\[300px\] {
+    height: 300px;
   }
   .laptop\:max-w-none {
     max-width: none;
@@ -2040,6 +2297,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:max-w-\[700px\] {
     max-width: 700px;
+  }
+  .laptop\:max-w-\[245px\] {
+    max-width: 245px;
+  }
+  .laptop\:flex-\[0_1_41\%\] {
+    flex: 0 1 41%;
   }
   .laptop\:translate-x-0 {
     --tw-translate-x: 0px;
@@ -2082,12 +2345,20 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 3.375rem;
     line-height: 3.75rem;
   }
+  .laptop\:text-h5 {
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+  }
   .laptop\:font-medium {
     font-weight: 500;
   }
   .laptop\:hover\:translate-y-\[-5px\]:hover {
     --tw-translate-y: -5px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .laptop\:hover\:bg-neutral-200:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 236 238 / var(--tw-bg-opacity));
   }
   .laptop\:hover\:shadow-et_4:hover {
     --tw-shadow: 0px 40px 50px rgba(0, 0, 0, 0.2);
@@ -2131,6 +2402,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .desktop\:flex-row {
+    flex-direction: row;
   }
   .desktop\:gap-x-8 {
     -moz-column-gap: 2rem;
