--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -424,8 +424,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
 }
 .btn:active {
-  --tw-scale-x: .98;
-  --tw-scale-y: .98;
+  --tw-scale-x: .97;
+  --tw-scale-y: .97;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   background-color: var(--secondary-500);
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -491,6 +491,35 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(13 148 136 / var(--tw-ring-opacity));
+}
+.btn-outlined {
+  background-color: transparent;
+  --tw-text-opacity: 1;
+  color: rgb(141 92 92 / var(--tw-text-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(141 92 92 / var(--tw-ring-opacity));
+}
+.btn-outlined:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(141 92 92 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(252 250 251 / var(--tw-text-opacity));
+}
+.btn-outlined:active {
+  background-color: var(--primary-plum-600);
+  --tw-text-opacity: 1;
+  color: rgb(252 250 251 / var(--tw-text-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-color: var(--primary-plum-600);
+}
+.btn-outlined:disabled {
+  --tw-text-opacity: 1;
+  color: rgb(252 250 251 / var(--tw-text-opacity));
 }
 .container {
     padding: 0 15px;
@@ -717,9 +746,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-6 {
   margin-bottom: 1.5rem;
 }
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -744,14 +770,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-4 {
   margin-top: 1rem;
 }
-.mr-12 {
-  margin-right: 3rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 .mr-1 {
   margin-right: 0.25rem;
 }
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 .mt-16 {
   margin-top: 4rem;
@@ -762,8 +788,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-14 {
   margin-top: 3.5rem;
 }
-.mt-8 {
-  margin-top: 2rem;
+.ml-2 {
+  margin-left: 0.5rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -773,9 +799,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-2\.5 {
   margin-bottom: 0.625rem;
-}
-.mr-4 {
-  margin-right: 1rem;
 }
 .mr-6 {
   margin-right: 1.5rem;
@@ -789,14 +812,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-\[10px\] {
   margin-bottom: 10px;
 }
-.ml-2 {
-  margin-left: 0.5rem;
+.mr-12 {
+  margin-right: 3rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
 }
 .mb-16 {
   margin-bottom: 4rem;
+}
+.mt-20 {
+  margin-top: 5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .mt-52 {
   margin-top: 13rem;
@@ -860,6 +889,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-\[100vh\] {
   height: 100vh;
+}
+.h-\[60px\] {
+  height: 60px;
 }
 .max-h-\[304px\] {
   max-height: 304px;
@@ -927,6 +959,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-\[20px\] {
   width: 20px;
 }
+.w-\[60px\] {
+  width: 60px;
+}
 .max-w-none {
   max-width: none;
 }
@@ -941,6 +976,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-\[350px\] {
   max-width: 350px;
+}
+.max-w-\[18px\] {
+  max-width: 18px;
 }
 .max-w-\[249px\] {
   max-width: 249px;
@@ -1025,16 +1063,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-rotate: 352deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.rotate-\[349deg\] {
-  --tw-rotate: 349deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-12 {
-  --tw-rotate: 12deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .rotate-\[-8deg\] {
   --tw-rotate: -8deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.rotate-\[349deg\] {
+  --tw-rotate: 349deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -1053,6 +1087,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .animate-spin {
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .cursor-default {
   cursor: default;
@@ -1223,6 +1260,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(141 92 92 / var(--tw-bg-opacity));
 }
+.bg-teal-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
+}
 .bg-secondary-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(242 192 102 / var(--tw-bg-opacity));
@@ -1253,6 +1294,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-primary-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(151 105 105 / var(--tw-bg-opacity));
+}
+.bg-primary-50 {
+  background-color: var(--primary-plum-50);
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
@@ -1372,6 +1416,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -1387,10 +1435,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-\[24px\] {
   padding-left: 24px;
   padding-right: 24px;
-}
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
@@ -1571,6 +1615,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .leading-\[1\.5\] {
   line-height: 1.5;
 }
+.leading-5 {
+  line-height: 1.25rem;
+}
 .tracking-widest {
   letter-spacing: 0.1em;
 }
@@ -1623,6 +1670,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(141 92 92 / var(--tw-text-opacity));
 }
+.text-neutral-50 {
+  --tw-text-opacity: 1;
+  color: rgb(252 250 251 / var(--tw-text-opacity));
+}
 .text-warning-700 {
   --tw-text-opacity: 1;
   color: rgb(180 83 9 / var(--tw-text-opacity));
@@ -1661,10 +1712,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-neutral-50 {
-  --tw-text-opacity: 1;
-  color: rgb(252 250 251 / var(--tw-text-opacity));
 }
 .text-blue-slate {
   --tw-text-opacity: 1;
@@ -1725,10 +1772,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.ring {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .ring-4 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-teal-400 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(45 212 191 / var(--tw-ring-opacity));
 }
 .ring-black {
   --tw-ring-opacity: 1;
@@ -1963,6 +2019,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(19 78 74 / var(--tw-text-opacity));
 }
+.after\:bottom-\[-16px\]::after {
+  content: var(--tw-content);
+  bottom: -16px;
+}
+.last\:mr-0:last-child {
+  margin-right: 0px;
+}
 .hover\:scale-\[1\.2\]:hover {
   --tw-scale-x: 1.2;
   --tw-scale-y: 1.2;
@@ -2003,6 +2066,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:ring-teal-400:hover {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(45 212 191 / var(--tw-ring-opacity));
+}
+.hover\:ring-neutral-400:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(208 201 205 / var(--tw-ring-opacity));
 }
 .hover\:ring-secondary-400:hover {
   --tw-ring-opacity: 1;
@@ -2051,10 +2118,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
 }
+.active\:scale-\[\.97\]:active {
+  --tw-scale-x: .97;
+  --tw-scale-y: .97;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .active\:scale-\[\.98\]:active {
   --tw-scale-x: .98;
   --tw-scale-y: .98;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.active\:bg-neutral-400:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(208 201 205 / var(--tw-bg-opacity));
 }
 .active\:bg-secondary-500:active {
   background-color: var(--secondary-500);
@@ -2215,6 +2291,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mb-3 {
     margin-bottom: 0.75rem;
   }
+  .tablet\:mr-12 {
+    margin-right: 3rem;
+  }
   .tablet\:mt-5 {
     margin-top: 1.25rem;
   }
@@ -2251,9 +2330,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:mr-44 {
     margin-right: 11rem;
   }
-  .tablet\:mr-12 {
-    margin-right: 3rem;
-  }
   .tablet\:flex {
     display: flex;
   }
@@ -2286,6 +2362,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:flex-\[0_1_50\%\] {
     flex: 0 1 50%;
+  }
+  .tablet\:flex-none {
+    flex: none;
   }
   .tablet\:flex-auto {
     flex: 1 1 auto;
@@ -2390,8 +2469,18 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 3.375rem;
     line-height: 3.75rem;
   }
+  .tablet\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
   .tablet\:leading-4 {
     line-height: 1rem;
+  }
+  .tablet\:leading-none {
+    line-height: 1;
+  }
+  .tablet\:first\:pr-7:first-child {
+    padding-right: 1.75rem;
   }
 }
 @media (min-width: 1024px) {
@@ -2409,6 +2498,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:top-auto {
     top: auto;
+  }
+  .laptop\:col-span-12 {
+    grid-column: span 12 / span 12;
+  }
+  .laptop\:col-start-2 {
+    grid-column-start: 2;
   }
   .laptop\:my-4 {
     margin-top: 1rem;
@@ -2532,22 +2627,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.5rem;
     line-height: 1.75rem;
   }
-  .laptop\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-  .laptop\:text-xl {
-    font-size: 1.25rem;
-    line-height: 2rem;
-  }
   .laptop\:font-medium {
     font-weight: 500;
-  }
-  .laptop\:leading-4 {
-    line-height: 1rem;
-  }
-  .laptop\:leading-6 {
-    line-height: 1.5rem;
   }
   .laptop\:hover\:translate-y-\[-5px\]:hover {
     --tw-translate-y: -5px;
@@ -2612,6 +2693,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:mb-16 {
     margin-bottom: 4rem;
   }
+  .desktop\:mt-32 {
+    margin-top: 8rem;
+  }
   .desktop\:h-\[138px\] {
     height: 138px;
   }
@@ -2658,13 +2742,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:pr-24 {
     padding-right: 6rem;
   }
-  .desktop\:text-4\.5xl {
-    font-size: 2.375rem;
-    line-height: 2.5rem;
-  }
   .desktop\:text-xl {
     font-size: 1.25rem;
     line-height: 2rem;
+  }
+  .desktop\:text-4\.5xl {
+    font-size: 2.375rem;
+    line-height: 2.5rem;
   }
   .desktop\:text-base {
     font-size: 1rem;
@@ -2794,10 +2878,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   --primary-plum-100: #f0e3dc;
   --primary-plum-200: #f0d6c7;
   --primary-plum-300: #cda7a7;
+  --primary-plum-500: #845c5c;
   --primary-plum-400: #976969;
   --primary-plum-600: #5f3d3d;
   --primary-plum-700: #4c3434;
   --secondary-500: #c59743;
+  --neutral-50: #fcfafb;
   --neutral-400: #d0c9cd;
   --neutral-500: #a1929a;
   --neutral-600: #8f7d87;
