--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -561,6 +561,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 0px;
   bottom: 0px;
 }
+.top-\[50\%\] {
+  top: 50%;
+}
 .top-\[-20px\] {
   top: -20px;
 }
@@ -626,9 +629,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .right-\[0px\] {
   right: 0px;
-}
-.top-\[50\%\] {
-  top: 50%;
 }
 .z-10 {
   z-index: 10;
@@ -700,17 +700,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
 .my-0 {
   margin-top: 0px;
   margin-bottom: 0px;
+}
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 .my-2 {
   margin-top: 0.5rem;
@@ -728,10 +732,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -746,9 +746,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-8 {
   margin-bottom: 2rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -797,6 +794,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ml-2 {
   margin-left: 0.5rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -858,11 +858,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
   display: none;
 }
+.h-\[250px\] {
+  height: 250px;
+}
 .h-\[100px\] {
   height: 100px;
 }
 .h-\[30px\] {
   height: 30px;
+}
+.h-full {
+  height: 100%;
 }
 .h-\[42px\] {
   height: 42px;
@@ -899,12 +905,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .h-\[60px\] {
   height: 60px;
-}
-.h-\[300px\] {
-  height: 300px;
-}
-.h-\[250px\] {
-  height: 250px;
 }
 .min-h-fullBot {
   min-height: calc(100vh - env(safe-area-inset-bottom));
@@ -1041,6 +1041,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-none {
   flex: none;
 }
+.translate-y-\[-50\%\] {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1051,10 +1055,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .translate-y-0 {
   --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-y-\[-50\%\] {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .translate-x-\[0\] {
@@ -1374,9 +1374,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 17px;
   padding-bottom: 17px;
 }
-.px-\[18px\] {
-  padding-left: 18px;
-  padding-right: 18px;
+.px-\[24px\] {
+  padding-left: 24px;
+  padding-right: 24px;
 }
 .py-7 {
   padding-top: 1.75rem;
@@ -1442,16 +1442,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.px-\[24px\] {
-  padding-left: 24px;
-  padding-right: 24px;
-}
-.px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+.pb-\[92\%\] {
+  padding-bottom: 92%;
 }
 .pb-12 {
   padding-bottom: 3rem;
@@ -1461,6 +1456,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pl-11 {
   padding-left: 2.75rem;
+}
+.pb-\[80\%\] {
+  padding-bottom: 80%;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1569,25 +1567,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
 .text-h4 {
   font-size: 1.75rem;
   line-height: 2.125rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 2rem;
-}
 .text-h5 {
   font-size: 1.5rem;
   line-height: 1.75rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 2rem;
 }
 .text-display-2 {
   font-size: 3.375rem;
@@ -1610,6 +1608,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .uppercase {
   text-transform: uppercase;
+}
+.lowercase {
+  text-transform: lowercase;
 }
 .capitalize {
   text-transform: capitalize;
@@ -1634,6 +1635,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.tracking-normal {
+  letter-spacing: 0em;
 }
 .tracking-wide {
   letter-spacing: 0.025em;
@@ -1818,6 +1822,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ring-offset-white {
   --tw-ring-offset-color: #fff;
+}
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2394,11 +2402,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .tablet\:grid-cols-tablet {
     grid-template-columns: minmax(0,1fr) repeat(12,minmax(30px,72.5px)) minmax(0,1fr);;
   }
-  .tablet\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
   .tablet\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .tablet\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .tablet\:flex-row {
     flex-direction: row;
@@ -2526,6 +2534,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:mb-8 {
     margin-bottom: 2rem;
   }
+  .laptop\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
   .laptop\:mt-7 {
     margin-top: 1.75rem;
   }
@@ -2552,12 +2563,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:mr-4 {
     margin-right: 1rem;
-  }
-  .laptop\:mb-7 {
-    margin-bottom: 1.75rem;
-  }
-  .laptop\:mb-6 {
-    margin-bottom: 1.5rem;
   }
   .laptop\:block {
     display: block;
@@ -2596,11 +2601,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
-  .laptop\:grid-cols-navDesktop {
-    grid-template-columns: minmax(auto, 1fr) minmax(auto, 3fr) minmax(auto, 1fr);
-  }
   .laptop\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .laptop\:grid-cols-navDesktop {
+    grid-template-columns: minmax(auto, 1fr) minmax(auto, 3fr) minmax(auto, 1fr);
   }
   .laptop\:flex-row {
     flex-direction: row;
@@ -2704,6 +2709,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:mt-24 {
     margin-top: 6rem;
   }
+  .desktop\:ml-12 {
+    margin-left: 3rem;
+  }
   .desktop\:mt-12 {
     margin-top: 3rem;
   }
@@ -2722,9 +2730,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .desktop\:w-\[138px\] {
     width: 138px;
   }
-  .desktop\:max-w-none {
-    max-width: none;
-  }
   .desktop\:max-w-\[600px\] {
     max-width: 600px;
   }
@@ -2733,9 +2738,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .desktop\:grid-cols-desktop {
     grid-template-columns: minmax(0,1fr) repeat(12,minmax(auto, calc((1548px - (11 * 30px)) / 12))) minmax(0,1fr);;
-  }
-  .desktop\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .desktop\:gap-x-8 {
     -moz-column-gap: 2rem;
@@ -2766,17 +2768,13 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.25rem;
     line-height: 2rem;
   }
-  .desktop\:text-4\.5xl {
-    font-size: 2.375rem;
+  .desktop\:text-h3 {
+    font-size: 2.063rem;
     line-height: 2.5rem;
   }
   .desktop\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-  .desktop\:text-h3 {
-    font-size: 2.063rem;
-    line-height: 2.5rem;
   }
   .desktop\:leading-6 {
     line-height: 1.5rem;
@@ -2894,6 +2892,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.lazy-load-image-background.blur {
+  filter: blur(15px);
+}
+.lazy-load-image-background.blur.lazy-load-image-loaded {
+  filter: blur(0);
+  transition: filter .3s;
+}
+.lazy-load-image-background.blur > img {
+  opacity: 0;
+}
+.lazy-load-image-background.blur.lazy-load-image-loaded > img {
+  opacity: 1;
+  transition: opacity .3s;
+}
 .root,
 :root,
 #docs-root {
@@ -2943,4 +2955,8 @@ a:hover {
   }
 button:focus {
     outline: none;
+  }
+.lazy-load-wrapper span {
+    width: 100% !important;
+    height: auto !important;
   }
