--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -450,7 +450,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .btn-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(141 92 92 / var(--tw-bg-opacity));
+  background-color: rgb(205 167 167 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -491,6 +491,31 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(13 148 136 / var(--tw-ring-opacity));
+}
+.btn-teal-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(180 203 203 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(39 57 57 / var(--tw-text-opacity));
+}
+.btn-teal-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(180 203 203 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(39 57 57 / var(--tw-text-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(180 203 203 / var(--tw-ring-opacity));
+}
+.btn-teal-300:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(105 151 151 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(26 38 38 / var(--tw-text-opacity));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(105 151 151 / var(--tw-ring-opacity));
 }
 .btn-outlined {
   background-color: transparent;
@@ -712,13 +737,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 .mx-5 {
   margin-left: 1.25rem;
@@ -795,14 +820,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mb-12 {
+  margin-bottom: 3rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
 }
-.mb-12 {
-  margin-bottom: 3rem;
+.mb-0 {
+  margin-bottom: 0px;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .mb-2\.5 {
   margin-bottom: 0.625rem;
@@ -818,6 +846,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .mb-\[10px\] {
   margin-bottom: 10px;
+}
+.mt-1 {
+  margin-top: 0.25rem;
 }
 .mr-12 {
   margin-right: 3rem;
@@ -843,11 +874,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-ml-1 {
   margin-left: -0.25rem;
 }
-.mb-0 {
-  margin-bottom: 0px;
-}
 .block {
   display: block;
+}
+.inline-block {
+  display: inline-block;
 }
 .flex {
   display: flex;
@@ -909,6 +940,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-\[60px\] {
   height: 60px;
 }
+.max-h-60 {
+  max-height: 15rem;
+}
 .min-h-fullBot {
   min-height: calc(100vh - env(safe-area-inset-bottom));
 }
@@ -960,6 +994,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-5 {
   width: 1.25rem;
 }
+.w-72 {
+  width: 18rem;
+}
 .w-0 {
   width: 0px;
 }
@@ -992,6 +1029,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-\[18px\] {
   max-width: 18px;
+}
+.max-w-\[24px\] {
+  max-width: 24px;
 }
 .max-w-\[249px\] {
   max-width: 249px;
@@ -1038,11 +1078,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-1 {
   flex: 1 1 0%;
 }
-.flex-\[0_1_50\%\] {
-  flex: 0 1 50%;
-}
 .flex-none {
   flex: none;
+}
+.flex-\[0_1_50\%\] {
+  flex: 0 1 50%;
 }
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
@@ -1166,6 +1206,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   -moz-column-gap: 0px;
        column-gap: 0px;
 }
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
 .self-end {
   align-self: flex-end;
 }
@@ -1197,6 +1241,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rounded-2xl {
   border-radius: 1rem;
+}
+.rounded-\[13px\] {
+  border-radius: 13px;
 }
 .rounded-xl {
   border-radius: 0.75rem;
@@ -1297,6 +1344,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(246 244 245 / var(--tw-bg-opacity));
 }
+.bg-amber-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 243 199 / var(--tw-bg-opacity));
+}
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
@@ -1311,6 +1362,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-primary-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(151 105 105 / var(--tw-bg-opacity));
+}
+.bg-neutral-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(222 217 220 / var(--tw-bg-opacity));
 }
 .bg-primary-50 {
   background-color: var(--primary-plum-50);
@@ -1327,6 +1382,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .p-\[5px\] {
   padding: 5px;
+}
+.p-4 {
+  padding: 1rem;
 }
 .p-6 {
   padding: 1.5rem;
@@ -1464,8 +1522,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pl-11 {
   padding-left: 2.75rem;
 }
-.pb-\[64\%\] {
-  padding-bottom: 64%;
+.pb-\[48\.25\%\] {
+  padding-bottom: 48.25%;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1512,6 +1570,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pr-10 {
   padding-right: 2.5rem;
 }
+.pl-10 {
+  padding-left: 2.5rem;
+}
 .pt-\[68px\] {
   padding-top: 68px;
 }
@@ -1532,12 +1593,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pt-8 {
   padding-top: 2rem;
-}
-.pb-\[55\%\] {
-  padding-bottom: 55%;
-}
-.pb-\[48\.25\%\] {
-  padding-bottom: 48.25%;
 }
 .text-left {
   text-align: left;
@@ -1618,6 +1673,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .font-light {
   font-weight: 300;
+}
+.font-bold {
+  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1705,6 +1763,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(252 250 251 / var(--tw-text-opacity));
 }
+.text-primary-900 {
+  --tw-text-opacity: 1;
+  color: rgb(19 13 13 / var(--tw-text-opacity));
+}
 .text-warning-700 {
   --tw-text-opacity: 1;
   color: rgb(180 83 9 / var(--tw-text-opacity));
@@ -1736,6 +1798,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(208 201 205 / var(--tw-text-opacity));
 }
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.text-amber-900 {
+  --tw-text-opacity: 1;
+  color: rgb(120 53 15 / var(--tw-text-opacity));
+}
+.text-amber-600 {
+  --tw-text-opacity: 1;
+  color: rgb(217 119 6 / var(--tw-text-opacity));
+}
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1743,6 +1817,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-neutral-900 {
+  --tw-text-opacity: 1;
+  color: rgb(21 18 19 / var(--tw-text-opacity));
 }
 .text-blue-slate {
   --tw-text-opacity: 1;
@@ -1779,6 +1857,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-et_1 {
+  --tw-shadow: 0px 3px 4px rgba(161, 161, 161, 0.4);;
+  --tw-shadow-colored: 0px 3px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1799,6 +1882,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1811,6 +1899,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ring-4 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-1 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .ring-teal-400 {
@@ -1862,6 +1955,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-shadow {
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1887,6 +1985,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.will-change-auto {
+  will-change: auto;
 }
 .underlined {
     position: relative;
@@ -2093,6 +2194,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(45 212 191 / var(--tw-text-opacity));
 }
+.hover\:shadow-xxl-red:hover {
+  --tw-shadow: 27px 28px 43px 13px rgba(176, 131, 131, 0.24);
+  --tw-shadow-colored: 27px 28px 43px 13px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .hover\:ring:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2152,6 +2258,28 @@ Ensure the default browser behavior of the `hidden` attribute.
 .focus\:ring-secondary-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(242 192 102 / var(--tw-ring-opacity));
+}
+.focus-visible\:border-indigo-500:focus-visible {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
+.focus-visible\:ring-2:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus-visible\:ring-white:focus-visible {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+}
+.focus-visible\:ring-opacity-75:focus-visible {
+  --tw-ring-opacity: 0.75;
+}
+.focus-visible\:ring-offset-2:focus-visible {
+  --tw-ring-offset-width: 2px;
+}
+.focus-visible\:ring-offset-orange-300:focus-visible {
+  --tw-ring-offset-color: #fdba74;
 }
 .active\:scale-\[\.97\]:active {
   --tw-scale-x: .97;
@@ -2358,9 +2486,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .tablet\:mb-0 {
     margin-bottom: 0px;
-  }
-  .tablet\:ml-3 {
-    margin-left: 0.75rem;
   }
   .tablet\:mr-44 {
     margin-right: 11rem;
@@ -2571,6 +2696,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:mt-0 {
     margin-top: 0px;
   }
+  .laptop\:mb-4 {
+    margin-bottom: 1rem;
+  }
   .laptop\:mr-8 {
     margin-right: 2rem;
   }
@@ -2583,6 +2711,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:flex {
     display: flex;
   }
+  .laptop\:grid {
+    display: grid;
+  }
   .laptop\:hidden {
     display: none;
   }
@@ -2591,6 +2722,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
   .laptop\:h-full {
     height: 100%;
+  }
+  .laptop\:w-auto {
+    width: auto;
   }
   .laptop\:max-w-none {
     max-width: none;
@@ -2613,6 +2747,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .laptop\:translate-x-0 {
     --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+  .laptop\:grid-flow-col {
+    grid-auto-flow: column;
   }
   .laptop\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -2979,4 +3116,14 @@ button:focus {
 .lazy-load-image-full img {
     width: 100%;
     max-width: none;
+  }
+.width-test:after {
+    content: attr(title);
+    display: block;
+    font-weight: bold;
+    color: transparent;
+    overflow: hidden;
+    visibility: hidden;
+    height: 0;
+    font-weight: 700;
   }
